# db3c-pdf2ofx

./: .gitignore  README.md  RUNBOOK_MAINTAINER.md  TODO.md  pdf2ofx.py  pyproject.toml
converters/: ofx_emitter.py
docs/: BATCH_FAILURE_POINTS.md  CLI_SANITY_UX_AUDIT_REPORT.md  DEBUG_SANITY_SOURCE_PDF_AND_AUTOOPEN.md  MINDEE_DATA_SCHEMA_REFERENCE.md  PERFORMANCE_AUDIT.md  RECONCILIATION_LARGE_STATEMENTS.md  SANITY_ENGINE_ARCHITECTURE.md  SPEC_SANITY_LAYER_v0.1.md  SPEC_pdf2ofx_v0-1-0.md  codex_implementation_prompt.md
docs/implementation_reports/2026-02-13/: IMPLEMENTATION_REPORT_fix_SANITY_navigation_UX.md
docs/notes/: vnext_sanity_ideas.md
docs/v0.1.1/: PM_REPORT.md  RFC_MINDEE_MODEL_REFACTOR.md  RFC_SETTINGS_WIZARD.md  SCOPE.md  SPEC.md  UI_UX.md  post_integration_report.md
handlers/: mindee_handler.py
helpers/: errors.py  reporting.py  ui.py
normalizers/: canonicalize.py
output/: canonical_statement.ofx
paranoid_folder/: Notes.txt
paranoid_folder/future_prompts_might_get_dropped/: document_tests_prompt.md
paranoid_folder/pf_recovery_mode_testing/: e36118847891.json  e4e427277135.json
src/pdf2ofx/: __init__.py  __main__.py  cli.py
tests/: test_canonicalize.py  test_cli.py  test_fitid.py  test_fs.py  test_mindee_integration.py  test_ofx_emitter.py  test_page_grouping.py  test_sanity.py  test_validator.py
tests/fixtures/: canonical_statement.json  mindee_custom_schema.json
tmp/: Extrait de comptes Compte 19095 000208661 01 COMPTE COURANT PROFESSIONNEL EUR FP DEVELOPPEMENT au 2025-02-28.json
validators/: contract_validator.py
(+12 files in other folders)
